# simple-api-server

./: Cargo.toml  README.md
src/: main.rs
